# oatpp-ws-test

./: .gitignore  CMakeLists.txt  cmake.sh  oatpp-well-structured-project-Config.h.in
curl-tests/: curl-get-hello.sh  curl-post-hello.sh  settings.sh
src/: App.cpp  AppComponent.hpp
src/controller/: HelloController.cpp  HelloController.hpp
src/dto/: Message.hpp
test/: HelloControllerTest.cpp  HelloControllerTest.hpp  Tests.cpp
test/app/: ApiTestClient.hpp
